Fix spacing

--- a/sass/custom/_paulus.scss
+++ b/sass/custom/_paulus.scss
@@ -20,7 +20,7 @@ h3, h4 {font-weight: 700;}
 h1.title.delta {
   border-bottom: none;
   text-transform: uppercase;
-  letter-spacing: .1em;
+  letter-spacing: .05em;
 }
 
 .title.indent {
@@ -640,7 +640,7 @@ article.listing {
 
   h2 {
     // font-size: 1.5em;
-    margin-top: 2em;
+    margin-top: 2.5em;
   }
 
   h3 {
